<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:card_view="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/saved_recipe_item"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:layout_marginEnd="8dp"
  android:layout_marginStart="8dp"
  android:layout_marginTop="8dp"
  android:clickable="true"
  android:focusable="true"
  card_view:cardBackgroundColor="@color/colorPrimary"
  android:foreground="?attr/selectableItemBackgroundBorderless"
  card_view:cardCornerRadius="8dp">


<!--<androidx.cardview.widget.CardView-->
<!--      android:id="@+id/card_view"-->
<!--      android:layout_width="match_parent"-->
<!--      android:layout_height="wrap_content"-->
<!--      card_view:cardBackgroundColor="@color/colorPrimary"-->
<!--&gt;-->


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/brewedOnTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Brewed On: DATE HERE"
                android:layout_margin="1dp"
                android:textAlignment="center">

            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout style="@style/SavedRecipeLinearLayoutForViewsStyle">

                        <ImageView
                            android:id="@+id/waterAmountImageView"
                            style="@style/SavedRecipeImageViewStyle"
                            android:contentDescription="@string/water_temperature_image"
                            android:src="@drawable/ic_kettlebyxnimrodx" />

                        <TextView
                            android:id="@+id/waterAndTempTV"
                            style="@style/SavedRecipeItemTextViewStyle"
                            tools:text="Water and Temp" />

                    </LinearLayout>


                    <LinearLayout style="@style/SavedRecipeLinearLayoutForViewsStyle">

                        <ImageView
                            android:id="@+id/beansWeight"
                            style="@style/SavedRecipeImageViewStyle"
                            android:contentDescription="@string/beans_weight_image"
                            android:src="@drawable/ic_weightbyphoto3idea_studio" />

                        <TextView
                            android:id="@+id/beansWeightTV"
                            style="@style/SavedRecipeItemTextViewStyle"
                            tools:text="Beans Weight" />

                    </LinearLayout>

                    <LinearLayout
                        style="@style/SavedRecipeLinearLayoutForViewsStyle"
                        android:layout_marginBottom="2dp">

                        <ImageView
                            android:id="@+id/beansGrindLevel"
                            style="@style/SavedRecipeImageViewStyle"
                            android:contentDescription="@string/grind_level_image"
                            android:src="@drawable/ic_coffee_grinderbypongsakornred" />

                        <TextView
                            android:id="@+id/beansGrindLevelTV"
                            style="@style/SavedRecipeItemTextViewStyle"
                            tools:text="Beans Grind" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout style="@style/SavedRecipeLinearLayoutForViewsStyle">

                        <ImageView
                            android:id="@+id/brewingMethodImage"
                            style="@style/SavedRecipeImageViewStyle"
                            android:contentDescription="@string/brew_method_image"
                            android:src="@drawable/ic_aeropressbyxnimrodx" />

                        <TextView
                            android:id="@+id/brewMethodTV"
                            style="@style/SavedRecipeItemTextViewStyle"
                            tools:text="Brew Method" />
                    </LinearLayout>

                    <LinearLayout style="@style/SavedRecipeLinearLayoutForViewsStyle">

                        <ImageView
                            android:id="@+id/time"
                            style="@style/SavedRecipeImageViewStyle"
                            android:contentDescription="@string/brew_time_image"
                            android:src="@drawable/ic_chronometerbyfreepik" />

                        <TextView
                            android:id="@+id/savedTimeTV"
                            style="@style/SavedRecipeItemTextViewStyle"
                            tools:text="Time" />

                    </LinearLayout>
                    <LinearLayout
                        android:visibility="gone"
                        tools:visibility="visible"
                        android:id="@+id/likeRecipeLayout"
                        style="@style/SavedRecipeLinearLayoutForViewsStyle"
                        android:layout_marginBottom="2dp">

                        <ImageButton
                            android:id="@+id/likeRecipeButton"
                            style="@style/SavedRecipeImageViewStyle"
                            android:background="@color/transparent"
                            android:contentDescription="heartIcon"
                            android:scaleType="fitCenter"
                            android:soundEffectsEnabled="false"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_heart_off" />

                        <TextView
                            android:id="@+id/AddToFavourites"
                            style="@style/SavedRecipeItemTextViewStyle"
                            android:text="Add Favourite"
                            tools:text="Add Favourite" />

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

</androidx.cardview.widget.CardView>